# rhestri

./: .gitignore  .pre-commit-config.yaml  manage.py  pyproject.toml
checklists/: admin.py  models.py
checklists/views/: templates.py
maintlists/: apps.py
rhestri/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: main.css
templates/: base.html
templates/auth/: login.html
